# awo-description-generator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: asgi.py  cmd.py  logs.py  settings.py
app/dto/: annotations.py  commands.py  enums.py  exceptions.py
app/dto/entities/: __init__.py  base.py  reports.py
app/lib/: chatgpt.py  clusters.py  wb.py
app/repository/: reports.py
app/services/: reports.py  service.py
app/transport/http/: auth.py  dependencies.py  exceptions.py  routes.py
app/transport/http/api/public/: __init__.py  reports.py
app/transport/http/api/service/: __init__.py
app/transport/http/schema/: __init__.py  reports.py
contrib/: docker-compose.yml
deploy/: Dockerfile.web
scripts/: entrypoint.sh
tests/units/api/: test_health_check.py  test_reports.py
tests/units/fixtures/: api.py  app.py
